--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
     "lucide-react-native": "^0.461.0",
-    "nativewind": "latest",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
