--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wix-assignment-react-native",
+  "name": "assignment-react-native",
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
