--- a/cesconfig.json
+++ b/cesconfig.json
@@ -1,6 +1,6 @@
 {
   "cesVersion": "2.12.1",
-  "projectName": "wix-assignment-react-native",
+  "projectName": "assignment-react-native",
   "packages": [
     {
       "name": "expo-router",
